added skill content

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,3 +154,47 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
+/* what i do styles */
+.what-i-do {
+    margin: 130px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+    margin-top: 170px;
+    margin-bottom: 130px;
+
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    font-weight: 400;
+    font-size: 16px;
+    color: #757575;
+
+}
+
+/* resume section */
+.section-title1 {
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
+    text-align: center;
+    margin-bottom: 113px;
+}
